Terraform&Aws/terraform-alb-ec2/alb.tf
resource "aws_security_group" "alb_sgroup" {
    name        = "alb-sg"
    description = "Allow HTTP traffic to ALB"
    vpc_id      = aws_vpc.main.id
    
    ingress {
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]


    }
    egress {
            from_port   = 0
            to_port     = 0
            protocol    = "-1"
            cidr_blocks = ["0.0.0.0/0"]

        }

}
resource "aws_lb" "alb" {
    name               = "terraform-alb"
    internal           = false
    load_balancer_type = "application"
    security_groups    = [aws_security_group.alb_sgroup.id]
    subnets            = aws_subnet.public.*.id

    tags = {
        Name = "terraform-alb"
    }
  
}

resource "aws_lb_target_group" "tg" {
    name     = "terraform-tg"
    port     = 80
    protocol = "HTTP"
    vpc_id   = aws_vpc.main.id

    health_check {
        path                = "/"
        protocol            = "HTTP"
        matcher             = "200"
        interval            = 30
        timeout             = 5
        healthy_threshold   = 2
        unhealthy_threshold = 2
    }

    tags = {
        Name = "terraform-tg"
    }
}

resource "aws_lb_target_group_attachment" "attachment" {
    count            = 2
    target_group_arn = aws_lb_target_group.tg.arn
    target_id        = aws_instance.web_server[count.index].id
    port             = 80
  
}

resource "aws_lb_listener" "listener" {
    load_balancer_arn = aws_lb.alb.arn
    port              = 80
    protocol          = "HTTP"

    default_action {
        type             = "forward"
        target_group_arn = aws_lb_target_group.tg.arn
    }
  
}
